--- a/ayuda.html
+++ b/ayuda.html
@@ -5,55 +5,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="principal.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
     <title>Sección de Ayuda - E-commerce</title>
 </head>
 <body>
-    <!-- Barra de navegación -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <!-- Logo y nombre de la marca dentro de un mismo contenedor -->
-            <a class="navbar-brand" href="#">
-                <img src="imagenes\427189999_950988366646197_7228972704184196983_n.jpg" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
-                ESMIRLO FC
-            </a>
+  <div class="container-fluid">
+    <!-- IZQUIERDA: Logo + Marca -->
+    <a class="navbar-brand d-flex align-items-center" href="#">
+      <img src="imagenes/427189999_950988366646197_7228972704184196983_n.jpg" alt="Logo" width="30" height="30" class="d-inline-block align-text-top me-2" />
+      ESMIRLO FC
+    </a>
 
-            <!-- Botón para el menú desplegable en dispositivos móviles -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+    <!-- IZQUIERDA: Instagram + Carrito + Dirección -->
+    <div class="d-flex align-items-center ms-auto">
+      <a class="nav-link me-3" href="https://www.instagram.com/esmirlofc/?hl=es" target="_blank">
+        <i class="bi bi-instagram fs-5"></i>
+      </a>
+      <a class="nav-link me-3 position-relative" href="carrito.html">
+        <i class="bi bi-cart fs-5"></i>
+        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" id="cart-count">0</span>
+      </a>
+      <a class="nav-link text-muted small" href="https://www.google.com.ar/maps/place/Av.+V%C3%A9lez+Sarsfield+1234,+X5000+C%C3%B3rdoba" target="_blank">📍</a>
+    </div>
 
-            <!-- Contenedor de los elementos de navegación (menú y búsqueda) -->
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <!-- Menú desplegable de Categorías -->
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Categorías
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Camisetas</a></li>
-                            <li><a class="dropdown-item" href="#">Conjuntos</a></li>
-                            <li><a class="dropdown-item" href="#">Accesorios</a></li>
-                        </ul>
-                    </li>
-    
-                    <!-- Otras opciones -->
-                    <li class="nav-item">
-                        <a class="nav-link" href="ofertas.html">Ofertas</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="ayuda.html">Ayuda</a>
-                    </li>
-                </ul>
+    <!-- Botón navegador para móviles -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-                <!-- Formulario de búsqueda -->
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search"/>
-                    <button class="btn btn-outline-success" type="submit">Buscar</button>
-                </form>
-            </div>
-        </div>
-    </nav>
+    <!-- CENTRO: Menú de navegación -->
+    <div class="collapse navbar-collapse" id="navbarContent">
+      <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Categorías</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="remeras.html">Camisetas</a></li>
+            <li><a class="dropdown-item" href="conjunto.html">Conjuntos</a></li>
+            <li><a class="dropdown-item" href="accesorios.html">Accesorios</a></li>
+          </ul>
+        </li>
+        <li class="nav-item"><a class="nav-link" href="ofertas.html">Ofertas</a></li>
+        <li class="nav-item"><a class="nav-link" href="ayuda.html">Ayuda</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
 
     <!-- Sección de Ayuda -->
     <div class="container py-5">
