--- a/principal.html
+++ b/principal.html
@@ -24,14 +24,17 @@
   <a class="nav-link me-3" href="https://www.instagram.com/esmirlofc/?hl=es" target="_blank">
     <i class="bi bi-instagram fs-5"></i>
   </a>
-  <a class="nav-link me-3" href="carrito.html">
-    <i class="bi bi-cart fs-5"></i>
-  </a>
+    <a class="nav-link me-3 position-relative" href="carrito.html">
+  <i class="bi bi-cart fs-5"></i>
+  <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" id="cart-count">
+    0
+  </span>
+</a>
+
   <a class="nav-link text-muted small" href="https://www.google.com.ar/maps/place/Av.+V%C3%A9lez+Sarsfield+1234,+X5000+C%C3%B3rdoba" target="_blank">
     📍
   </a>
 </div>
-
 
     <!-- Botón navegador para móviles -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -248,6 +251,6 @@
   </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-qQ2a1F0rcHd8er4+WnA1V7ClIpiTkTSbVZbE14r5QW+3PrYjRxpOtGXR5aWvLzYh" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
-    
+    <script src="principal.js"></script>
 </body>
 </html>
