--- a/productos.html
+++ b/productos.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Administrador - Productos</title>
 </head>
+
 <body>
     <!-- Barra de navegación principal -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="imagenes/427189999_950988366646197_7228972704184196983_n.jpg" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
-                 Admin  - Gestión de Productos
+                <img src="imagenes/427189999_950988366646197_7228972704184196983_n.jpg" alt="Logo" width="30"
+                    height="30" class="d-inline-block align-text-top">
+                Admin - Gestión de Productos
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#adminNavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -85,7 +88,8 @@
                     </tr>
                 </tbody>
             </table>
-            <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addProductModal">Agregar Producto</button>
+            <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addProductModal">Agregar
+                Producto</button>
         </div>
 
         <!-- Categoría Conjuntos -->
@@ -114,7 +118,8 @@
                     </tr>
                 </tbody>
             </table>
-            <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addProductModal">Agregar Producto</button>
+            <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addProductModal">Agregar
+                Producto</button>
         </div>
 
         <!-- Categoría Accesorios -->
@@ -143,12 +148,14 @@
                     </tr>
                 </tbody>
             </table>
-            <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addProductModal">Agregar Producto</button>
+            <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addProductModal">Agregar
+                Producto</button>
         </div>
     </div>
 
     <!-- Modal para agregar producto -->
-    <div class="modal fade" id="addProductModal" tabindex="-1" aria-labelledby="addProductModalLabel" aria-hidden="true">
+    <div class="modal fade" id="addProductModal" tabindex="-1" aria-labelledby="addProductModalLabel"
+        aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -156,32 +163,38 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
                 <div class="modal-body">
-                    <form>
-                        <div class="mb-3">
-                            <label for="productName" class="form-label">Nombre del Producto</label>
-                            <input type="text" class="form-control" id="productName" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="productPrice" class="form-label">Precio</label>
-                            <input type="number" class="form-control" id="productPrice" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="productStock" class="form-label">Stock</label>
-                            <input type="number" class="form-control" id="productStock" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="productCategory" class="form-label">Categoría</label>
-                            <select class="form-select" id="productCategory" required>
-                                <option value="camisetas">Camisetas</option>
-                                <option value="conjuntos">Conjuntos</option>
-                                <option value="accesorios">Accesorios</option>
-                            </select>
-                        </div>
-                    </form>
+                   <form>
+  <div class="mb-3">
+      <label for="productName" class="form-label">Nombre del Producto</label>
+      <input type="text" class="form-control" id="productName" required>
+  </div>
+  <div class="mb-3">
+      <label for="productPrice" class="form-label">Precio</label>
+      <input type="number" class="form-control" id="productPrice" required>
+  </div>
+  <div class="mb-3">
+      <label for="productStock" class="form-label">Stock</label>
+      <input type="number" class="form-control" id="productStock" required>
+  </div>
+  <div class="mb-3">
+      <label for="productDescription" class="form-label">Descripción</label>
+      <textarea class="form-control" id="productDescription" rows="3" required></textarea>
+  </div>
+  <div class="mb-3">
+      <label for="productCategory" class="form-label">Categoría</label>
+      <select class="form-select" id="productCategory" required>
+          <option value="camisetas">Camisetas</option>
+          <option value="conjuntos">Conjuntos</option>
+          <option value="accesorios">Accesorios</option>
+      </select>
+  </div>
+</form>
+
+
                 </div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                    <button class="btn btn-primary">Agregar Producto</button>
+<button type="button" class="btn btn-primary">Agregar Producto</button>
                 </div>
             </div>
         </div>
@@ -190,4 +203,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="productos.js"></script>
 </body>
+
 </html>
