--- a/backend/src/frontend/productos.html
+++ b/backend/src/frontend/productos.html
@@ -51,8 +51,8 @@
         <input type="text" id="imageUrl" />
       </label>
       <h3>Variantes</h3>
-      <div id="variants-container"></div>
-      <button type="button" class="add-variant">Agregar Variante</button>
+      <!-- <div id="variants-container"></div> -->
+      <!-- <button type="button" class="add-variant">Agregar Variante</button> -->
       <button type="submit">Crear Producto</button>
     </form>
 
@@ -81,40 +81,40 @@
   </div>
 
   <script>
-    const variantsContainer = document.getElementById("variants-container");
-    const addVariantBtn = document.querySelector(".add-variant");
+    // const variantsContainer = document.getElementById("variants-container");
+    // const addVariantBtn = document.querySelector(".add-variant");
     const createMessage = document.getElementById("create-message");
     const purchaseMessage = document.getElementById("purchase-message");
     const mainContent = document.getElementById("main-content");
     const categorySelect = document.getElementById("category-select");
 
-    function createVariantInputs() {
-      const div = document.createElement("div");
-      div.classList.add("variant");
-      div.innerHTML = `
-        <h4>Variante</h4>
-        <label>Tamaño:
-          <input type="text" class="variant-size" required />
-        </label>
-        <label>Color:
-          <input type="text" class="variant-color" required />
-        </label>
-        <label>Stock:
-          <input type="number" class="variant-stock" min="0" value="0" required />
-        </label>
-        <button type="button" class="remove-variant">Eliminar Variante</button>
-      `;
-      div.querySelector(".remove-variant").addEventListener("click", () => {
-        variantsContainer.removeChild(div);
-      });
-      return div;
-    }
+    // function createVariantInputs() {
+    //   const div = document.createElement("div");
+    //   div.classList.add("variant");
+    //   div.innerHTML = `
+    //     <h4>Variante</h4>
+    //     <label>Tamaño:
+    //       <input type="text" class="variant-size" required />
+    //     </label>
+    //     <label>Color:
+    //       <input type="text" class="variant-color" required />
+    //     </label>
+    //     <label>Stock:
+    //       <input type="number" class="variant-stock" min="0" value="0" required />
+    //     </label>
+    //     <button type="button" class="remove-variant">Eliminar Variante</button>
+    //   `;
+    //   div.querySelector(".remove-variant").addEventListener("click", () => {
+    //     variantsContainer.removeChild(div);
+    //   });
+    //   return div;
+    // }
 
-    addVariantBtn.addEventListener("click", () => {
-      variantsContainer.appendChild(createVariantInputs());
-    });
+    // addVariantBtn.addEventListener("click", () => {
+    //   variantsContainer.appendChild(createVariantInputs());
+    // });
 
-    variantsContainer.appendChild(createVariantInputs());
+    // variantsContainer.appendChild(createVariantInputs());
 
     async function loadCategories(token) {
       try {
@@ -197,11 +197,12 @@
         category: categorySelect.value,
         price: parseFloat(document.getElementById("price").value),
         imageUrl: document.getElementById("imageUrl").value.trim() || null,
-        variants: [...variantsContainer.children].map(div => ({
-          size: div.querySelector(".variant-size").value.trim(),
-          color: div.querySelector(".variant-color").value.trim(),
-          stock: parseInt(div.querySelector(".variant-stock").value),
-        }))
+        variants: null
+        // variants: [...variantsContainer.children].map(div => ({
+        //   size: div.querySelector(".variant-size").value.trim(),
+        //   color: div.querySelector(".variant-color").value.trim(),
+        //   stock: parseInt(div.querySelector(".variant-stock").value),
+        // }))
       };
 
       try {
@@ -223,7 +224,7 @@
         }
 
         createMessage.style.color = "green";
-        createMessage.textContent = `Producto creado: ID ${data.id} con ${data.variants.length} variantes.`;
+        createMessage.textContent = `Producto creado: ID ${data.id}`;
 
       } catch (err) {
         createMessage.style.color = "red";
