--- a/frontend/pages/productos.html
+++ b/frontend/pages/productos.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Administrador - Productos</title>
 </head>
 
@@ -37,8 +37,6 @@
         <div id="category-container"></div>
     </div>
 
-
-
     <!-- Modal para agregar producto -->
     <div class="modal fade" id="addProductModal" tabindex="-1" aria-labelledby="addProductModalLabel"
         aria-hidden="true">
@@ -58,10 +56,10 @@
                             <label for="productPrice" class="form-label">Precio</label>
                             <input type="number" class="form-control" id="productPrice" required>
                         </div>
-                        <!-- <div class="mb-3">
+                         <div class="mb-3">
                             <label for="productStock" class="form-label">Stock</label>
                             <input type="number" class="form-control" id="productStock" required>
-                        </div> -->
+                        </div> 
                         <div class="mb-3">
                             <label for="productDescription" class="form-label">Descripción</label>
                             <textarea class="form-control" id="productDescription" rows="3" required></textarea>
@@ -81,16 +79,59 @@
                             <button type="submit" class="btn btn-primary">Agregar Producto</button>
                         </div>
                     </form>
-
-
                 </div>
-
             </div>
         </div>
     </div>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+<div class="container my-4">
+  <form id="product-form" class="border p-4 rounded bg-light">
+    <h2 class="mb-4">Crear Producto</h2>
+
+    <div class="mb-3">
+      <label for="name" class="form-label">Nombre del Producto</label>
+      <input type="text" class="form-control" id="name" required>
+    </div>
+
+    <div class="mb-3">
+      <label for="description" class="form-label">Descripción</label>
+      <textarea class="form-control" id="description" rows="3" required></textarea>
+    </div>
+
+    <div class="mb-3">
+      <label for="category-select" class="form-label">Categoría</label>
+      <select class="form-select" id="category-select" required>
+        <option value="">Selecciona una categoria</option>
+        <option value="">Camiseta</option>
+        <option value="">Conjuntos</option>
+        <option value="">Accesorios</option>
+      </select>
+    </div>
+
+    <div class="mb-3">
+      <label for="price" class="form-label">Precio</label>
+      <input type="number" class="form-control" id="price" step="0.01" required>
+    </div>
+
+    <div class="mb-3">
+      <label for="imageUrl" class="form-label">URL Imagen (opcional)</label>
+      <input type="text" class="form-control" id="imageUrl">
+    </div>
+
+    <h4 class="mt-4">Variantes</h4>
+    <div id="variants-container" class="mb-3"></div>
+
+    <div class="d-flex gap-2">
+      <button type="button" class="btn btn-outline-primary add-variant">Agregar Variante</button>
+      <button type="submit" class="btn btn-success">Crear Producto</button>
+    </div>
+  </form>
+</div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/productos.js"></script>
+    <script src=".frontend\js\productos.js"></script>
 </body>
 
 </html>
