--- a/frontend/pages/productos.html
+++ b/frontend/pages/productos.html
@@ -1,137 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <title>Administrador - Productos</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Administrador - Productos</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 
 <body>
-    <!-- Barra de navegación principal -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="../imagenes/427189999_950988366646197_7228972704184196983_n.jpg" alt="Logo" width="30"
-                    height="30" class="d-inline-block align-text-top">
-                Admin - Gestión de Productos
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#adminNavbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="adminNavbar">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">Panel</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Cerrar sesión</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <div class="container mt-4">
-        <div id="category-container"></div>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Admin - Productos</a>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#">Cerrar sesión</a></li>
+        </ul>
+      </div>
     </div>
+  </nav>
 
-    <!-- Modal para agregar producto -->
-    <div class="modal fade" id="addProductModal" tabindex="-1" aria-labelledby="addProductModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="addProductModalLabel">Agregar Producto</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                </div>
-                <div class="modal-body">
-                    <form id="product-form">
-                        <div class="mb-3">
-                            <label for="productName" class="form-label">Nombre del Producto</label>
-                            <input type="text" class="form-control" id="productName" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="productPrice" class="form-label">Precio</label>
-                            <input type="number" class="form-control" id="productPrice" required>
-                        </div>
-                         <div class="mb-3">
-                            <label for="productStock" class="form-label">Stock</label>
-                            <input type="number" class="form-control" id="productStock" required>
-                        </div> 
-                        <div class="mb-3">
-                            <label for="productDescription" class="form-label">Descripción</label>
-                            <textarea class="form-control" id="productDescription" rows="3" required></textarea>
-                        </div>
-                        <div class="mb-3">
-                            <label for="productImage" class="form-label">Imagen del Producto</label>
-                            <input type="text" class="form-control" id="productImage" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="productCategory" class="form-label">Categoría</label>
-                            <select class="form-select" id="productCategory" required>
-                                <option value="">Selecciona una categoría</option>
-                            </select>
-                        </div>
-                        <div class="modal-footer">
-                            <button class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                            <button type="submit" class="btn btn-primary">Agregar Producto</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <div class="container my-4">
+    <form id="product-form" class="border p-4 rounded bg-light">
+      <h2 class="mb-4">Crear Producto</h2>
 
-<div class="container my-4">
-  <form id="product-form" class="border p-4 rounded bg-light">
-    <h2 class="mb-4">Crear Producto</h2>
+      <div class="mb-3">
+        <label for="name" class="form-label">Nombre del Producto</label>
+        <input type="text" class="form-control" id="name" required />
+      </div>
 
-    <div class="mb-3">
-      <label for="name" class="form-label">Nombre del Producto</label>
-      <input type="text" class="form-control" id="name" required>
-    </div>
+      <div class="mb-3">
+        <label for="description" class="form-label">Descripción</label>
+        <textarea class="form-control" id="description" rows="3" required></textarea>
+      </div>
 
-    <div class="mb-3">
-      <label for="description" class="form-label">Descripción</label>
-      <textarea class="form-control" id="description" rows="3" required></textarea>
-    </div>
+      <div class="mb-3">
+        <label for="category-select" class="form-label">Categoría</label>
+        <select class="form-select" id="category-select" required>
+          <option value="">Selecciona una categoría</option>
+        </select>
+      </div>
 
-    <div class="mb-3">
-      <label for="category-select" class="form-label">Categoría</label>
-      <select class="form-select" id="category-select" required>
-        <option value="">Selecciona una categoria</option>
-        <option value="">Camiseta</option>
-        <option value="">Conjuntos</option>
-        <option value="">Accesorios</option>
-      </select>
-    </div>
+      <div class="mb-3">
+        <label for="price" class="form-label">Precio</label>
+        <input type="number" class="form-control" id="price" step="0.01" required />
+      </div>
 
-    <div class="mb-3">
-      <label for="price" class="form-label">Precio</label>
-      <input type="number" class="form-control" id="price" step="0.01" required>
-    </div>
+      <div class="mb-3">
+        <label for="imageUrl" class="form-label">URL Imagen (opcional)</label>
+        <input type="text" class="form-control" id="imageUrl" />
+      </div>
 
-    <div class="mb-3">
-      <label for="imageUrl" class="form-label">URL Imagen (opcional)</label>
-      <input type="text" class="form-control" id="imageUrl">
-    </div>
+      <h4 class="mt-4">Variantes</h4>
+      <div id="variants-container" class="mb-3"></div>
 
-    <h4 class="mt-4">Variantes</h4>
-    <div id="variants-container" class="mb-3"></div>
+      <div class="d-flex gap-2">
+        <button type="button" class="btn btn-outline-primary add-variant" onclick="agregarVariante()">Agregar Variante</button>
+        <button type="submit" class="btn btn-success">Crear Producto</button>
+      </div>
+    </form>
+  </div>
 
-    <div class="d-flex gap-2">
-      <button type="button" class="btn btn-outline-primary add-variant">Agregar Variante</button>
-      <button type="submit" class="btn btn-success">Crear Producto</button>
-    </div>
-  </form>
-</div>
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src=".frontend\js\productos.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="../js/productos.js"></script>
 </body>
 
 </html>
