--- a/frontend/pages/categoria.html
+++ b/frontend/pages/categoria.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ESMIRLO FC - Tienda</title>
-
-  <!-- Bootstrap CSS + Icons -->
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
-    crossorigin="anonymous" />
+    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous" />
+  <!-- Bootstrap Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
-
-  <!-- CSS personalizado -->
-  <link rel="stylesheet" href="../css/principal.css" />
+  <link rel="stylesheet" href="../css/categoria.css" />
+  <title>Esmirlo</title>
 </head>
 
 <body>
-
-  <!-- Navbar -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand d-flex align-items-center" href="principal.html">
@@ -50,7 +46,6 @@
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Categorías</a>
             <ul class="dropdown-menu" id="categorias-dropdown"></ul>
           </li>
-          </li>
           <li class="nav-item"><a class="nav-link" href="ofertas.html">Ofertas</a></li>
           <li class="nav-item"><a class="nav-link" href="ayuda.html">Ayuda</a></li>
         </ul>
@@ -58,49 +53,19 @@
     </div>
   </nav>
 
-  <!-- Carrusel -->
-  <div id="carouselExampleCaptions" class="carousel slide">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="../imagenes/ChatGPT Image 7 may 2025, 09_14_56 p.m..png" class="d-block w-100" alt="..." />
-      </div>
-      <div class="carousel-item">
-        <img
-          src="../imagenes/A_realistic_photo_of_a_person_juggling_a_single_soccer_ball_on_a_bright_green_soccer_field_The_individual_is_wearing_a_sporty_outfit_that_prominently_displays_the_name_Es.png"
-          class="d-block w-100" alt="..." />
-      </div>
-      <div class="carousel-item">
-        <img
-          src="../imagenes/A_realistic_photo_of_a_person_wearing_a_stylish_sports_outfit_including_a_fitted_jersey_and_athletic_shorts_The_individual_is_posing_in_a_modern_urban_setting_such_as_a_city_par.png"
-          class="d-block w-100" alt="..." />
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon"></span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-      <span class="carousel-control-next-icon"></span>
-    </button>
-  </div>
-
-  <!-- Sección de productos -->
   <div class="container py-5">
-    <h2 class="mb-4 text-center">Nuestros Productos</h2>
-    <div class="row row-cols-2 row-cols-md-3 row-cols-lg-5 g-4" id="productos-container">
-      <!-- Los productos se cargarán dinámicamente aquí -->
+    <h2 id="titulo-categoria" class="mb-4 text-center">Productos</h2>
+    <div id="productos-contenedor" class="row row-cols-2 row-cols-md-3 row-cols-lg-5 g-4">
+      <!-- Productos dinámicos -->
     </div>
   </div>
 
-  <!-- Scripts -->
+  <!-- Bootstrap JS con SRI corregido -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
     crossorigin="anonymous"></script>
-  <script src="../js/principal.js"></script>
 
+  <script src="../js/categoria.js"></script>
 </body>
 
 </html>
