--- a/frontend/pages/administrador.html
+++ b/frontend/pages/administrador.html
@@ -50,9 +50,18 @@
             <div class="col-md-6">
                 <div class="card shadow-sm h-100">
                     <div class="card-body">
-                        <h5 class="card-title">Gestión de Pedidos</h5>
-                        <p class="card-text">Revisa y actualiza el estado de los pedidos.</p>
-                        <a href="#" class="btn btn-primary">Ir a pedidos</a>
+                        <h5 class="card-title">Historial de ventas</h5>
+                        <p class="card-text">Visualiza el historial total de ventas.</p>
+                        <a href="#" class="btn btn-primary">Ir a ventas</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card shadow-sm h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">Gestión de perfiles</h5>
+                        <p class="card-text">Visualiza los perfiles, pudiendo eliminarlos.</p>
+                        <a href="#" class="btn btn-primary">Ir a perfiles</a>
                     </div>
                 </div>
             </div>
