--- a/frontend/pages/carrito.html
+++ b/frontend/pages/carrito.html
@@ -5,11 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Carrito</title>
 
-  <!-- Bootstrap + Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-
-  <!-- Tu CSS personalizado -->
   <link rel="stylesheet" href="../css/principal.css">
 </head>
 <body>
@@ -35,10 +32,10 @@
           📍
         </a>
       </div>
+      
     </div>
   </nav>
 
-  <!-- CONTENIDO -->
   <div class="container mt-4">
     <h2>Tu carrito</h2>
     <div id="cart-items" class="row g-3 mt-3"></div>
@@ -79,6 +76,12 @@
     <div id="resumen-compra" class="mt-4 d-none">
       <h4>Gracias por tu compra</h4>
       <p>Tu pedido fue registrado correctamente.</p>
+    </div>
+
+    <!-- Lista de pedidos del usuario -->
+    <div id="lista-pedidos" class="mt-5">
+      <h3>Mis pedidos</h3>
+      <div id="orders-list" class="mt-3"></div>
     </div>
   </div>
 
