--- a/frontend/pages/principal.html
+++ b/frontend/pages/principal.html
@@ -53,6 +53,7 @@
           </li>
           <li class="nav-item"><a class="nav-link" href="ofertas.html">Ofertas</a></li>
           <li class="nav-item"><a class="nav-link" href="ayuda.html">Ayuda</a></li>
+          <li class="nav-item"><a class="nav-link" id="logout-button">Cerrar sesion</a></li>
         </ul>
       </div>
     </div>
