Se conectó el front y el back de administrador, ademas se realizo retoques en las interfaces y la navegacion

--- a/frontend/pages/carrito.html
+++ b/frontend/pages/carrito.html
@@ -84,7 +84,7 @@
       <div id="orders-list" class="mt-3"></div>
     </div>
   </div>
-
-  <script src="../js/carrito.js"></script>
+  <script type="module" src="../utils/sessions.js"></script>
+  <script type="module" src="../js/carrito.js"></script>
 </body>
 </html>
