--- a/frontend/pages/administrador.html
+++ b/frontend/pages/administrador.html
@@ -1,36 +1,41 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panel de Administración - ESMIRLO FC</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="stylesheet" href="../ccs/principal.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/principal.css">
 </head>
+
 <body>
     <!-- Barra de navegación -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="../imagenes/427189999_950988366646197_7228972704184196983_n.jpg" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
+            <a class="navbar-brand" href="../pages/principal.html">
+                <img src="../imagenes/427189999_950988366646197_7228972704184196983_n.jpg" alt="Logo" width="30"
+                    height="30" class="d-inline-block align-text-top">
                 ESMIRLO FC - Admin
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#adminNavbar" aria-controls="adminNavbar" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#adminNavbar"
+                aria-controls="adminNavbar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="adminNavbar">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Panel</a>
+                        <a class="nav-link active" href="../pages/administrador.html">Panel</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Cerrar sesión</a>
+                        <a class="nav-link" onClick="logout()">Cerrar sesión</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    
+
     <!-- Contenido principal -->
     <div class="container py-5">
         <h2 class="text-center mb-4">Panel de Administración</h2>
@@ -41,7 +46,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Gestión de Productos</h5>
                         <p class="card-text">Agrega, edita o elimina productos del catálogo.</p>
-                        <a href="#" class="btn btn-primary">Ir a productos</a>
+                        <a href="../pages/gestion-productos.html" class="btn btn-primary">Ir a productos</a>
                     </div>
                 </div>
             </div>
@@ -50,9 +55,9 @@
             <div class="col-md-6">
                 <div class="card shadow-sm h-100">
                     <div class="card-body">
-                        <h5 class="card-title">Historial de ventas</h5>
+                        <h5 class="card-title">Historial de pedidos</h5>
                         <p class="card-text">Visualiza el historial total de ventas.</p>
-                        <a href="#" class="btn btn-primary">Ir a ventas</a>
+                        <a href="../pages/gestion-pedidos.html" class="btn btn-primary">Ir a ventas</a>
                     </div>
                 </div>
             </div>
@@ -61,7 +66,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Gestión de perfiles</h5>
                         <p class="card-text">Visualiza los perfiles, pudiendo eliminarlos.</p>
-                        <a href="#" class="btn btn-primary">Ir a perfiles</a>
+                        <a href="../pages/gestion-usuarios.html" class="btn btn-primary">Ir a perfiles</a>
                     </div>
                 </div>
             </div>
@@ -71,8 +76,10 @@
             <a href="principal.html" class="btn btn-secondary">Volver al Inicio</a>
         </div>
     </div>
-
+    <script type="module" src="../utils/sessions.js"></script>
+    <script type="module" src="../js/administrador.js"></script>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
