--- a/frontend/pages/ayuda.html
+++ b/frontend/pages/ayuda.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="stylesheet" href="../principal.css">
+    <link rel="stylesheet" href="../css/principal.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
     <title>Sección de Ayuda - E-commerce</title>
 </head>
@@ -38,15 +38,12 @@
     <div class="collapse navbar-collapse" id="navbarContent">
       <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Categorías</a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="remeras.html">Camisetas</a></li>
-            <li><a class="dropdown-item" href="conjunto.html">Conjuntos</a></li>
-            <li><a class="dropdown-item" href="accesorios.html">Accesorios</a></li>
-          </ul>
-        </li>
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Categorías</a>
+            <ul class="dropdown-menu" id="categorias-dropdown"></ul>
+          </li>
         <li class="nav-item"><a class="nav-link" href="ofertas.html">Ofertas</a></li>
         <li class="nav-item"><a class="nav-link" href="ayuda.html">Ayuda</a></li>
+        <li class="nav-item"><a class="nav-link" onclick="logout()">Cerrar sesion</a></li>
       </ul>
     </div>
   </div>
@@ -134,7 +131,8 @@
     <div class="text-center mt-5">
     <a href="principal.html" class="btn btn-primary">Volver</a>
     </div>
-
+    <script type="module" src="../utils/sessions.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="../js/ayuda.js"></script>
 </body>
 </html>
