--- a/frontend/pages/categoria.html
+++ b/frontend/pages/categoria.html
@@ -48,6 +48,7 @@
           </li>
           <li class="nav-item"><a class="nav-link" href="ofertas.html">Ofertas</a></li>
           <li class="nav-item"><a class="nav-link" href="ayuda.html">Ayuda</a></li>
+          <li class="nav-item"><a class="nav-link" onclick="logout()">Cerrar sesion</a></li>
         </ul>
       </div>
     </div>
@@ -64,8 +65,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
     crossorigin="anonymous"></script>
-
-  <script src="../js/categoria.js"></script>
+| <script type="module" src="../utils/sessions.js"></script>
+  <script type="module" src="../js/categoria.js"></script>
 </body>
 
 </html>
