--- a/frontend/pages/productos.html
+++ b/frontend/pages/productos.html
@@ -13,9 +13,15 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Admin - Productos</a>
       <div class="collapse navbar-collapse">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="#">Cerrar sesión</a></li>
-        </ul>
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" href="../pages/administrador.html">Panel</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" onClick="logout()">Cerrar sesión</a>
+            </li>
+          </ul>
       </div>
     </div>
   </nav>
@@ -70,7 +76,9 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="../js/productos.js"></script>
+  <script type="module" src="../js/productos.js"></script>
+  <script type="module" src="../utils/sessions.js"></script>
+
 </body>
 
 </html>
