--- a/frontend/pages/restablecer-contraseña.html
+++ b/frontend/pages/restablecer-contraseña.html
@@ -147,6 +147,6 @@
     stepEmail.classList.remove('d-none');
   });
 </script>
-
+  <script type="module" src="../utils/sessions.js"></script>
 </body>
 </html>
