--- a/frontend/pages/carrito.html
+++ b/frontend/pages/carrito.html
@@ -89,6 +89,19 @@
   </div>
   <script type="module" src="../utils/sessions.js"></script>
   <script type="module" src="../js/carrito.js"></script>
+<footer class="bg-body-tertiary border-top mt-5">
+  <div class="container py-3 text-center">
+    <div class="d-inline-flex align-items-center gap-4">
+      <a href="https://www.instagram.com/esmirlo.fc" target="_blank" class="text-dark text-decoration-none d-flex align-items-center gap-2">
+        <i class="bi bi-instagram fs-5"></i> <span>Instagram</span>
+      </a>
+      <a href="https://www.google.com.ar/maps/place/Av.+V%C3%A9lez+Sarsfield+1234,+X5000+C%C3%B3rdoba"
+         target="_blank" class="text-dark text-decoration-none d-flex align-items-center gap-2">
+        <span style="font-size: 1.2rem;">📍</span> <span>Ubicación</span>
+      </a>
+    </div>
+  </div>
+</footer>
 </body>
 
 </html>
