--- a/frontend/pages/principal.html
+++ b/frontend/pages/principal.html
@@ -24,7 +24,7 @@
       </a>
 
       <div class="d-flex align-items-center ms-auto">
-        <a class="nav-link me-3" href="https://www.instagram.com/esmirlofc/?hl=es" target="_blank">
+        <a class="nav-link me-3" href="https://www.instagram.com/esmirlo.fc?igsh=MWZyYjNndG15dDJxcA==" target="_blank">
           <i class="bi bi-instagram fs-5"></i>
         </a>
         <a class="nav-link me-3 position-relative" href="carrito.html">
@@ -105,6 +105,22 @@
   <script type="module" src="../utils/sessions.js"></script>
   <script type="module" src="../js/principal.js"></script>
   <script type="module" src="../utils/products.js"></script>
+
+<footer class="bg-body-tertiary border-top mt-5">
+  <div class="container py-3 text-center">
+    <div class="d-inline-flex align-items-center gap-4">
+      <a href="https://www.instagram.com/esmirlo.fc" target="_blank" class="text-dark text-decoration-none d-flex align-items-center gap-2">
+        <i class="bi bi-instagram fs-5"></i> <span>Instagram</span>
+      </a>
+      <a href="https://www.google.com.ar/maps/place/Av.+V%C3%A9lez+Sarsfield+1234,+X5000+C%C3%B3rdoba"
+         target="_blank" class="text-dark text-decoration-none d-flex align-items-center gap-2">
+        <span style="font-size: 1.2rem;">📍</span> <span>Ubicación</span>
+      </a>
+    </div>
+  </div>
+</footer>
+
+
 
 </body>
 
