Mejora front suscripcion

--- a/frontend/pages/carrito.html
+++ b/frontend/pages/carrito.html
@@ -89,6 +89,26 @@
   </div>
   <script type="module" src="../utils/sessions.js"></script>
   <script type="module" src="../js/carrito.js"></script>
+  <!-- Suscripcion -->
+<section class="py-5 mt-5 text-white" style="background: linear-gradient(135deg, #8B0000, #FF0000);">
+  <div class="container text-center">
+    <h3 class="fw-bold mb-3 text-uppercase">¡Unite a la hinchada de ESMIRLO FC!</h3>
+    <p class="mb-4 fs-5">Recibí en tu correo las últimas camisetas, ofertas y noticias del club.</p>
+    <form class="row justify-content-center align-items-center g-2" id="form-suscripcion">
+      <div class="col-md-5">
+        <input type="email" class="form-control form-control-lg border-0" id="inputCorreo"
+          placeholder="Ingresá tu correo" required>
+      </div>
+      <div class="col-auto">
+        <button type="submit" class="btn btn-light btn-lg fw-bold px-4">Suscribirme</button>
+      </div>
+    </form>
+    <div id="mensajeSuscripcion" class="mt-3 text-white fw-semibold d-none">
+      ¡Gracias por sumarte a la familia ESMIRLO!
+    </div>
+  </div>
+</section>
+
 <footer class="bg-body-tertiary border-top mt-5">
   <div class="container py-3 text-center">
     <div class="d-inline-flex align-items-center gap-4">
