--- a/frontend/pages/ofertas.html
+++ b/frontend/pages/ofertas.html
@@ -109,7 +109,28 @@
   <script type="module" src="../utils/sessions.js"></script>
   <script type="module" src="../js/principal.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
-<footer class="bg-body-tertiary border-top mt-5">
+<!-- Suscripcion -->
+<section class="py-5 mt-5 text-white" style="background: linear-gradient(135deg, #8B0000, #FF0000);">
+  <div class="container text-center">
+    <h3 class="fw-bold mb-3 text-uppercase">¡Unite a la hinchada de ESMIRLO FC!</h3>
+    <p class="mb-4 fs-5">Recibí en tu correo las últimas camisetas, ofertas y noticias del club.</p>
+    <form class="row justify-content-center align-items-center g-2" id="form-suscripcion">
+      <div class="col-md-5">
+        <input type="email" class="form-control form-control-lg border-0" id="inputCorreo"
+          placeholder="Ingresá tu correo" required>
+      </div>
+      <div class="col-auto">
+        <button type="submit" class="btn btn-light btn-lg fw-bold px-4">Suscribirme</button>
+      </div>
+    </form>
+    <div id="mensajeSuscripcion" class="mt-3 text-white fw-semibold d-none">
+      ¡Gracias por sumarte a la familia ESMIRLO!
+    </div>
+  </div>
+</section>
+
+
+  <footer class="bg-body-tertiary border-top mt-5">
   <div class="container py-3 text-center">
     <div class="d-inline-flex align-items-center gap-4">
       <a href="https://www.instagram.com/esmirlo.fc" target="_blank" class="text-dark text-decoration-none d-flex align-items-center gap-2">
